--- a/clean-code-s1e1/style.css
+++ b/clean-code-s1e1/style.css
@@ -4,21 +4,21 @@ body {
   color: #333;
   font-family: lato, sans-serif;
 }
-.aaa {
+.content {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.content img {
   width: 100%;
 }
-.aaa .more-inf {
+.content .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.aaa { text-align: center;
+.content { text-align: center;
 }
 }
 .centered-main-page-element {
