--- a/clean-code-s1e1/style.css
+++ b/clean-code-s1e1/style.css
@@ -21,7 +21,7 @@ body {
 .content { text-align: center;
 }
 }
-.centered-main-page-element {
+.center-page {
   display: block;
   width: 500px;
   margin: 0 auto 0;
