--- a/clean-code-s1e1/style.css
+++ b/clean-code-s1e1/style.css
@@ -1,24 +1,24 @@
 /* Basic Style */
-body {
+.content {
   background-color: #f8f8f8;
   color: #333;
   font-family: lato, sans-serif;
 }
-.content {
+.top-page {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.content img {
+.matrix-planning {
   width: 100%;
 }
-.content .more-inf {
+.top-page .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.content { text-align: center;
+.top-page { text-align: center;
 }
 }
 .center-page {
@@ -34,17 +34,17 @@ body {
 .task-row-wrapper {
   display: flex;
 }
-ul {
+.ul-cl {
   margin:0;
   padding: 0px;
 }
-li, h3 {
+.li-cl, .h3 {
   list-style:none;
 }
-input,button{
+.input-cl, .button-cl{
   outline:none;
 }
-button {
+.button-cl {
   background: none;
   border: 0px;
   color: #888;
@@ -53,12 +53,12 @@ button {
   font-family: lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.button-cl:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.h3,
+.label-new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -67,7 +67,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input-text{
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -79,21 +79,21 @@ input[type="text"] {
   font-family: lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input-text:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.label-new-task {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.input-cl#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.li-cl {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -102,47 +102,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.li-cl > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.li-input-checkbox{
   margin: 0 10px;
 }
-li > label {
+.li-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.li-input-text{
   width: 226px
 }
-button.delete img {
+.button-delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.button-delete-img:hover {
   transform: rotatez(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
-  text-decoration: line-through
+.ul-completed-tasks-label {
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+.li-input-text {
   display:none
 }
 
-ul li.edit-mode input[type="text"] {
+.ul-li-edit-mode-input-text{
   display:inline-block;
   width:224px
 }
 
-ul li.edit-mode label {
+.ul-li-edit-mode-label {
   display:none;
 }
