--- a/clean-code-s1e1/style.css
+++ b/clean-code-s1e1/style.css
@@ -4,46 +4,59 @@
   color: #333;
   font-family: lato, sans-serif;
 }
+
 .top-page {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .matrix-planning {
   width: 100%;
 }
+
 .top-page .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-.top-page { text-align: center;
+
+  .top-page {
+    text-align: center;
+  }
+
 }
-}
+
 .center-page {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
+
 .task-row-wrapper {
   display: flex;
 }
+
 .ul-cl {
   margin:0;
   padding: 0px;
 }
+
 .li-cl, .h3 {
   list-style:none;
 }
+
 .input-cl, .button-cl{
   outline:none;
 }
+
 .button-cl {
   background: none;
   border: 0px;
@@ -53,9 +66,11 @@
   font-family: lato, sans-serif;
   cursor: pointer;
 }
+
 .button-cl:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
 .h3,
 .label-new-task {
@@ -67,6 +82,7 @@
   margin: 0;
   text-transform: uppercase;
 }
+
 .input-text{
   margin: 0;
   font-size: 18px;
@@ -79,6 +95,7 @@
   font-family: lato, sans-serif;
   color: #888;
 }
+
 .input-text:focus {
   color: #333;
 }
@@ -88,6 +105,7 @@
   display: block;
   margin: 0 0 20px;
 }
+
 .input-cl#new-task {
   width: 318px;
 }
@@ -102,6 +120,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .li-cl > * {
   vertical-align: middle;
 }
@@ -109,20 +128,24 @@
 .li-input-checkbox{
   margin: 0 10px;
 }
+
 .li-label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .li-input-text{
   width: 226px
 }
+
 .button-delete-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .button-delete-img:hover {
   transform: rotatez(0);
 }
