--- a/clean-code-s1e1/style.css
+++ b/clean-code-s1e1/style.css
@@ -37,7 +37,7 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 
 .task-row-wrapper {
@@ -115,7 +115,6 @@
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -137,7 +136,7 @@
 }
 
 .li-input-text{
-  width: 226px
+  width: 226px;
 }
 
 .button-delete-img {
@@ -158,12 +157,12 @@
 
 /* Edit Task */
 .li-input-text {
-  display:none
+  display:none;
 }
 
 .ul-li-edit-mode-input-text{
   display:inline-block;
-  width:224px
+  width:224px;
 }
 
 .ul-li-edit-mode-label {
